# pipeline-zoo

./: .dockerignore  .gitignore  LICENSE  README.md
doc/: examples.md  media.md  vcac-a.md
docs/: core.md  examples.md  flex_140_gpu.md  flex_170_gpu.md  generate_diagrams.sh  how_to_run_ma_performance_measurements_for_Intel(R)_data_center_GPU_Flex_Series.md  measurements.md  media.md  output.md  pick-and-go.md  pipebench-reference-guide.md  pipeline-runner-developer-guide.md  publishing.md  tasks-and-pipelines.md  tasks-and-pipelines.template.md  xeon.md
image/: README.md
manifest/: internal.txt  public.txt  update-public.sh
models/descriptions/dbnet/: model.yml
models/descriptions/dbnet_INT8/: model.yml
models/descriptions/efficientnet-b0_INT8/: model.yml
models/descriptions/efficientnet-b1/: model.yml
models/descriptions/efficientnet-b3/: model.yml
models/descriptions/efficientnet-b3_INT8/: model.yml
models/descriptions/mobilenet-ssd-tf/: model.yml
models/descriptions/mobilenet-ssd_INT8/: model.yml
models/descriptions/mobilenetv2/: model.yml
models/descriptions/mobilenetv2_7/: model.yml
models/descriptions/resnet-18-pytorch_INT8/: model.yml
models/descriptions/resnet-34-pytorch_INT8/: model.yml
models/descriptions/resnet-50-tf_INT8/: model.yml
models/descriptions/resnet_v1.5_50_i8_INT8/: model.yml
models/descriptions/retinanet-tf_INT8/: model.yml
models/descriptions/ssd_mobilenet_icx_INT8/: model.yml
models/descriptions/ssd_mobilenet_v1_coco_INT8/: model.yml
models/descriptions/ssd_mobilenet_v1_coco_pickngo/: model.yml
models/descriptions/ssd_mobilenet_v2_coco_INT8/: model.yml
models/descriptions/ssdlite_mobilenet_v2_INT8/: model.yml
models/descriptions/yolo-v4-tf-416_INT8/: model.yml
models/descriptions/yolo-v4-tf_INT8/: model.yml
models/descriptions/yolov5m-224/: model.yml
models/descriptions/yolov5m-224_INT8/: model.yml
models/descriptions/yolov5m-320/: model.yml
models/descriptions/yolov5m-320_INT8/: model.yml
models/descriptions/yolov5m-416/: model.yml
models/descriptions/yolov5m-416_INT8/: model.yml
models/descriptions/yolov5m-640/: model.yml
models/descriptions/yolov5m-640_INT8/: model.yml
models/descriptions/yolov5n_INT8/: model.yml
models/descriptions/yolov5s-416/: model.yml
models/descriptions/yolov5s-416_INT8/: model.yml
pipelines/: README.md
pipelines/audio/: README.md
pipelines/video/: README.md
runners/: README.md
runners/dlstreamer/: README.md
runners/gapi/: build.sh
runners/mockrun/: README.md  build.sh  requirements.txt  run.sh
runners/omz-demo/: build.sh  packages.txt
runners/omz-demo/omzrun/: CMakeLists.txt  arguments.hpp  main.cpp  modelutil.hpp  task.hpp
runners/opencv-gapi/: packages.txt
runners/opencv-gapi/gapirun/: CMakeLists.txt  arguments.hpp  main.cpp  modelutil.hpp  original_for_reference.cpp  postproc.hpp  task.hpp
suites/: benchmark.sh  benchmark_dgpu.sh  download.sh
tools/: README.md
tools/docker/: Dockerfile  README.md  build.sh  run.sh
tools/downloader/: README.md  requirements.txt
tools/metrics/: README.md
tools/metrics/system-monitor/cmd_client/: CMakeLists.txt  cmd_launch.cpp
tools/metrics/system-monitor/core_lib/: CMakeLists.txt
tools/metrics/system-monitor/core_lib/include/: cpustat.h  gpustat.h  procstatreader.h  pwrstat.h  sm.h  utils.h
tools/metrics/system-monitor/core_lib/src/: cpustat.c  gpustat.c  procstatreader.c  pwrstat.c  sm.c  utils.c
tools/metrics/system-monitor/zmq_service/: CMakeLists.txt  zmq_service.cpp
tools/pipebench/: README.md  mbnetssd.workload.yml  requirements.txt  yolov3.workload.yml
tools/systeminfo/: README.md  requirements.txt  systeminfo.json
tools/tests/: .coveragerc  conftest.py  download_test.py  pytest.sh  requirements.txt  run.sh  test_pipebench.py
tools/uploader/: README.md
video/object-detection/: README.md  task.schema.yml
(+541 files in other folders)
